# sasi

./: .eslintrc.js  .gitignore  .migration-log.md  CI-MONITORING-IMPLEMENTATION-REPORT.md  CLAUDE.md  Dockerfile  ISSUE-47-RESOLUTION.md  ISSUES_16_17_COMPLETION_SUMMARY.md  MCP_DASHBOARD_ROADMAP.md  PERFORMANCE_OPTIMIZATION_COMPLETION_REPORT.md  QUALITY_VALIDATION_FINAL_REPORT.md  README.md  TDD_FRAMEWORK_SUMMARY.md  TEST-VALIDATION-SUMMARY.md  WASM_PERFORMANCE_LAYER_COMPLETION_REPORT.md  ci-monitoring-test-report.json  create-github-issues.js  error-tracking.json  eslint-results.json  github-issue-33-update.md  github-issues.json  github-monitor.sh  index.html  investigation-issues.json  jest.config.ci.js  jest.config.js  jest.config.optimized.js  jest.simple.config.js  jest.swarmcontext.config.js  jest.tdd.config.js  monitor-commits.sh  monitor-tests.js  netlify.toml  package-lock.json  package.json  package.json.backup  package.json.bak  production-deployment.config.json  research_findings_context7_typescript.md  swarm-status-summary.md  (+6 more)
.claude/: config.json  settings.json
.devcontainer/: devcontainer_backup2.json  setup-tmux.sh
.jest-cache/: haste-map-08eaa78e395565dd54ce1aa2bec097f9-e55c7c26001c5d12e097b9104c38ba8f-8e410428e6f581af090276bc724e9873  perf-cache-08eaa78e395565dd54ce1aa2bec097f9-da39a3ee5e6b4b0d3255bfef95601890
.swarm/: memory.db
archive/: performance-config.json
config/: vite.config.ts
coverage-tdd/: AgentPersistenceManager.ts.html  NeuralWeightStorage.ts.html  index.html  lcov.info
docs/: API_REFERENCE.md  (+1 more)
src/wasm/: Cargo.toml  lib.rs
(+563 files in other folders)
