[package]
name = "neural-wasm-runtime"
version = "1.0.0"
edition = "2021"
description = "High-performance neural network runtime for SASI with SIMD acceleration"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Performance",
  "PerformanceTiming",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.release.package."*"]
opt-level = 3

# Enable WASM SIMD features
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-simd"]